p2p pause 구현 중
- 블로킹큐에 데이터 넣을 때 put 대신 offer로 변경